--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF 8">
 		<title> Email Filtering </title>
 		<link rel="stylesheet" href="{{ url_for('static', filename='css/contact.css')}}">
+		<link rel="stylesheet" href="{{ url_for('static', filename='css/all.min.css')}}">
 	</head>
 	<body>
 		<header>
@@ -25,6 +26,16 @@
 				<textarea id="txtarea" type="text" class="input-field" placeholder="Message"></textarea>
 				<button type="button" class="btn">Send Message</button>
 			</form>
+	</div>	
+
+
+	<div class="container">	
+			<h2 style="font-family: Cinzel"> Contact Us </h2> <br> <br> <br>
+			<p> <i class="far fa-envelope-open"></i> Email: yessir121651@gmail.com  </p>  <br> <br> <br>
+			<p> <i class="far fa-envelope-open"></i> Phone: 09193610903  </p> <br> <br> <br> <br> 
+			<h2 style="font-family: Cinzel"> Tell us what you think! </h2> <br> <br> <br>
+			<a class="ctaa" href="https://forms.gle/zF9MHhVMZcgU3q3v7"><button>Rate Us!</button></a>
+
 	</div>	
 	</body>
 
