--- a/templates/contact.html
+++ b/templates/contact.html
@@ -24,7 +24,7 @@
 				<input type="email" class="input-field" placeholder="Email">
 				<input type="text" class="input-field" placeholder="Subject">
 				<textarea id="txtarea" type="text" class="input-field" placeholder="Message"></textarea>
-				<button type="button" class="btn">Send Message</button>
+				<button type="button" class="btn" <a href="{{url_for('contact') }}">>Send Message</button>
 			</form>
 	</div>	
 
