--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,12 +12,23 @@
 				<nav>
 					<ul class="nav_links">
 						<li><a href="{{url_for('index') }}">Home</li>
-												
+									
 					</ul>
 				</nav>
 				<a class="cta" href="#"><button>Contact</button></a>
 		</header>		
 		<br>
+<div class ="both">
+	
+	<div class="container">	
+			<h2 style="font-family: Cinzel"> Contact Us </h2> <br> <br> <br>
+			<p> <i class="far fa-envelope-open"></i> Email: yessir121651@gmail.com  </p>  <br> <br> <br>
+			<p> <i class="fas fa-phone-alt"></i> Phone: 09193610903  </p> <br> <br> <br> <br> 
+			<h2 style="font-family: Cinzel"> Tell us what you think! </h2> <br> <br> <br>
+			<a class="ctaa" href="https://forms.gle/zF9MHhVMZcgU3q3v7"><button>Rate Us!</button></a>
+
+	</div>	
+
 	<div class="contact-box">	
 			<form>
 				<input type="text" class="input-field" placeholder="Name">
@@ -28,15 +39,7 @@
 			</form>
 	</div>	
 
-
-	<div class="container">	
-			<h2 style="font-family: Cinzel"> Contact Us </h2> <br> <br> <br>
-			<p> <i class="far fa-envelope-open"></i> Email: yessir121651@gmail.com  </p>  <br> <br> <br>
-			<p> <i class="far fa-envelope-open"></i> Phone: 09193610903  </p> <br> <br> <br> <br> 
-			<h2 style="font-family: Cinzel"> Tell us what you think! </h2> <br> <br> <br>
-			<a class="ctaa" href="https://forms.gle/zF9MHhVMZcgU3q3v7"><button>Rate Us!</button></a>
-
-	</div>	
+</div>
 	</body>
 
 </html>
