--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -75,24 +75,33 @@ body
 
 .contact-box
 {
-	width: 500px;
+
+	width: 30%;
 	background-color: white;
 	box-shadow: 0 0 20px 0 #999;
-	top: 50%;
-	left: 70%;
-	transform: translate(-50%,-50%);
-	position: absolute;
+	
+	
+	
 }
 
 
 .container
 {
-	width: 700px;
+	width: 40%;
 	background-color: #efefef;
-	top: 50%;
-	left: 30%;
-	transform: translate(-50%,-50%);
-	position: absolute;
+
+	
+	
+
+}
+
+.both{
+	margin-top: 50px;
+	display:flex;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 100%;
+	background-color: #efefef;
 }
 
 .container h2
@@ -121,7 +130,7 @@ form
 }
 .input-field
 {
-	width: 400px;
+	width: 100%;
 	height: 40px;
 	margin-top: 20px;
 	padding-left: 10px;
