--- a/templates/contact.html
+++ b/templates/contact.html
@@ -22,8 +22,8 @@
 	
 	<div class="container">	
 			<h2 style="font-family: Cinzel"> Contact Us </h2> <br> <br> <br>
-			<p> <i class="far fa-envelope-open"></i> Email: yessir121651@gmail.com  </p>  <br> <br> <br>
-			<p> <i class="fas fa-phone-alt"></i> Phone: 09193610903  </p> <br> <br> <br> <br> 
+			<p>  &#9993 Email: yessir121651@gmail.com </p>  <br> <br> <br>
+			<p>  &#9743 Phone: 09193610903  </p> <br> <br> <br> <br> 
 			<h2 style="font-family: Cinzel"> Tell us what you think! </h2> <br> <br> <br>
 			<a class="ctaa" href="https://forms.gle/zF9MHhVMZcgU3q3v7"><button>Rate Us!</button></a>
 
